--- a/2.Python_Basic.html
+++ b/2.Python_Basic.html
@@ -11796,7 +11796,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="s1">&#39;This is my first Python program.&#39;</span><span class="p">)</span>
@@ -11832,7 +11832,7 @@ div#notebook {
 <p>번외 : 만약 Spyder를 이용 중이라면, Spyder 오른쪽 하단의 IPython Console을 이용하여 위의 문장을 실행시켜 보자.
 Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.
 아래 그림의 In [1]: 오른쪽 부분에 print 'This is my first Python program.' 를 입력하고 엔터를 입력한다.</p>
-<p><img src="https://github.com/ksublee/spup/blob/master/figure/console.png?raw=true" alt="alt tag"></p>
+<p><img src="./figure/console.png" width="500"></p>
 
 </div>
 </div>
@@ -11993,9 +11993,7 @@ Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li>Python 3.x에서는 정수끼리 나누기 연산의 결과는 실수로 나타난다.</li>
-</ul>
+<p>Python 3.x에서는 정수끼리 나누기 연산의 결과는 실수로 나타난다.</p>
 
 </div>
 </div>
@@ -12025,6 +12023,48 @@ Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경
 
 <div class="output_text output_subarea output_execute_result">
 <pre>0.75</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>만약 나누기의 정수 부분만 나타내려면 다음을 이용한다.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="mi">7</span> <span class="o">//</span> <span class="mi">3</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[1]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>2</pre>
 </div>
 
 </div>
@@ -12368,7 +12408,7 @@ Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="https://github.com/ksublee/spup/blob/master/figure/variable.png?raw=true" alt="alt tag"></p>
+<p><img src="./figure/variable.png" width="600"></p>
 
 </div>
 </div>
