--- a/10.Hypothesis_test_and_inference.html
+++ b/10.Hypothesis_test_and_inference.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="10.-Hyperthesis-test-and-inference">10. Hyperthesis test and inference<a class="anchor-link" href="#10.-Hyperthesis-test-and-inference">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="&#53685;&#44228;&#51201;-&#44032;&#49444;-&#44160;&#51221;">&#53685;&#44228;&#51201; &#44032;&#49444; &#44160;&#51221;<a class="anchor-link" href="#&#53685;&#44228;&#51201;-&#44032;&#49444;-&#44160;&#51221;">&#182;</a></h2><p>이 단원에서는 통계적 가설 검정을 위한 함수들을 직접 작성하고, 활용하여 본다.</p>
 <p>통계적 가설의 예</p>
 <ul>
