--- a/2.Python_Basic.html
+++ b/2.Python_Basic.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="2.-Python&#51032;-&#44592;&#48376;">2. Python&#51032; &#44592;&#48376;<a class="anchor-link" href="#2.-Python&#51032;-&#44592;&#48376;">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Python-&#54532;&#47196;&#44536;&#47016;">Python &#54532;&#47196;&#44536;&#47016;<a class="anchor-link" href="#Python-&#54532;&#47196;&#44536;&#47016;">&#182;</a></h3><ul>
 <li><p>Python 프로그램의 소스 코드는 일련의 정의와 명령문으로 구성된다.</p>
 </li>
