--- a/4.Python_Function.html
+++ b/4.Python_Function.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="4.-&#54632;&#49688;">4. &#54632;&#49688;<a class="anchor-link" href="#4.-&#54632;&#49688;">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#54632;&#49688;---function">&#54632;&#49688; - function<a class="anchor-link" href="#&#54632;&#49688;---function">&#182;</a></h3><ul>
 <li><p>함수는 하나의 관련 작업을 수행하는 데 사용되는 재사용 가능한 코드 블록이다.</p>
 <ul>
