--- a/5.Python_List_Dictionary.html
+++ b/5.Python_List_Dictionary.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="5.-List-and-Dictionary">5. List and Dictionary<a class="anchor-link" href="#5.-List-and-Dictionary">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="List">List<a class="anchor-link" href="#List">&#182;</a></h3><ul>
 <li><code>[ ]</code>와 <code>,</code>로 표현하는 데이터 형으로 여러 가지 형태의 정보를 하나의 리스트로 묶어서 나타냄</li>
 </ul>
