--- a/6.Linear_algebra.html
+++ b/6.Linear_algebra.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="6.-Linear--algebra">6. Linear  algebra<a class="anchor-link" href="#6.-Linear--algebra">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Python&#50640;&#49436;&#51032;-&#49440;&#54805;-&#45824;&#49688;">Python&#50640;&#49436;&#51032; &#49440;&#54805; &#45824;&#49688;<a class="anchor-link" href="#Python&#50640;&#49436;&#51032;-&#49440;&#54805;-&#45824;&#49688;">&#182;</a></h2><ul>
 <li>이 단원에서는 선형 대수의 여러 개념을 Python 기본 함수와 리스트 등을 이용하여 구현하는 연습을 한다.</li>
 <li>벡터를 생성하고, 벡터와 행렬 연산을 수행할 수 있는 함수를 작성한다.</li>
