--- a/3.Python_Conditional.html
+++ b/3.Python_Conditional.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="3.-&#51312;&#44148;&#47928;">3. &#51312;&#44148;&#47928;<a class="anchor-link" href="#3.-&#51312;&#44148;&#47928;">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="if-else-&#44396;&#47928;">if else &#44396;&#47928;<a class="anchor-link" href="#if-else-&#44396;&#47928;">&#182;</a></h2><h3 id="Statement">Statement<a class="anchor-link" href="#Statement">&#182;</a></h3><p>Python interpreter가 실행 가능한 문법에 옳은 문장들을 statement라 한다.<br>
 앞 장에서 공부한 statement들과 더불어 조건문과 반복문을 공부해 보자.</p>
 <ul>
@@ -11785,9 +11793,37 @@ div#notebook {
 <li>조건문</li>
 <li>반복문</li>
 </ul>
-<h3 id="&#51312;&#44148;&#47928;">&#51312;&#44148;&#47928;<a class="anchor-link" href="#&#51312;&#44148;&#47928;">&#182;</a></h3><p>프로그래머가 명시한 if의 조건이 True인가 False인가에 따라 실행하는 문장(statement)이 달라지는 구문</p>
+<h3 id="&#51312;&#44148;&#47928;">&#51312;&#44148;&#47928;<a class="anchor-link" href="#&#51312;&#44148;&#47928;">&#182;</a></h3><p>프로그래머가 명시한 <code>if</code>의 조건이 <code>True</code>인가 <code>False</code>인가에 따라 실행하는 문장(statement)이 달라지는 구문</p>
+<ul>
+<li>테스트 구문은 항상 <code>True</code> 혹은 <code>False</code>로 계산된다.</li>
+<li><code>if</code>절의 다음에는 만약 테스트 결과가 <code>True</code>일 경우 실행될 코드 블록이 나타난다.<ul>
+<li>만약 테스트 구문이 <code>False</code>로 판명나면 실행하지 않는다.</li>
+</ul>
+</li>
+<li>추가적으로 만약 테스트 구문이 <code>False</code>일 때 할 일을 나타낼 수 있다.<ul>
+<li>이에 해당되는 코드는 <code>else</code> 혹은 <code>elif</code>의 구문에서 나타난다.</li>
+</ul>
+</li>
+</ul>
 <p><img src="https://github.com/ksublee/SPuP/blob/master/figure/if.png?raw=true" width="250" height="175" />
 그림 출처 : Introduction to Computation and Programming Using Python, John V. Guttag</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>아래 예제에 대한 간략한 설명이다.</p>
+<p><code>x % 2 == 0</code> (x를 2로 나눈 나머지가 0인가)의 연산결과가 <code>True</code>이면</p>
+<ul>
+<li><code>print('Even')</code>을 실행</li>
+</ul>
+<p><code>False</code>이면</p>
+<ul>
+<li><code>print('Odd')</code>을 실행</li>
+</ul>
 
 </div>
 </div>
@@ -11826,22 +11862,6 @@ div#notebook {
 </div>
 </div>
 
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><code>x % 2 == 0</code> (x를 2로 나눈 나머지가 0인가)의 연산결과가 <code>True</code>이면</p>
-<ul>
-<li><code>print('Even')</code>을 실행</li>
-</ul>
-<p><code>False</code>이면</p>
-<ul>
-<li><code>print('Odd')</code>을 실행</li>
-</ul>
-
-</div>
-</div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
@@ -11898,6 +11918,39 @@ else: 조건문 결과가 False일 경우 해야 할 일</code></pre>
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>get drunk
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">my_age</span> <span class="o">=</span> <span class="mi">17</span>
+<span class="k">if</span> <span class="n">my_age</span> <span class="o">&gt;=</span> <span class="mi">20</span><span class="p">:</span> <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;get drunk&quot;</span><span class="p">)</span>
+<span class="k">else</span><span class="p">:</span> <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;not this time&quot;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>not this time
 </pre>
 </div>
 </div>
@@ -12023,7 +12076,7 @@ do a laundry
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">if</span> <span class="mi">3</span> <span class="o">&lt;</span> <span class="mi">4</span><span class="p">:</span> <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;if&quot;</span><span class="p">)</span>
@@ -12055,7 +12108,7 @@ do a laundry
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">if</span> <span class="s2">&quot;3&quot;</span> <span class="o">&lt;</span> <span class="s2">&quot;4&quot;</span><span class="p">:</span> <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;if&quot;</span><span class="p">)</span>
@@ -12089,7 +12142,7 @@ do a laundry
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>주의 : 조건문에서 두 값이 같은지 비교할 때는 == 를 이용해야 한다.
+<p>주의 : 조건문에서 두 값이 같은지 비교할 때는 <code>==</code> 를 이용해야 한다.
 따라서 다음 코드는 에러가 발생한다.</p>
 
 </div>
@@ -12987,8 +13040,9 @@ Thanks!
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#50672;&#49845;&#47928;&#51228;">&#50672;&#49845;&#47928;&#51228;<a class="anchor-link" href="#&#50672;&#49845;&#47928;&#51228;">&#182;</a></h3><ul>
-<li>정수를 입력받아 홀수(odd)인지 짝수(even)인지 판별하는 프로그램을 작성하라.</li>
+<h3 id="&#50672;&#49845;&#47928;&#51228;">&#50672;&#49845;&#47928;&#51228;<a class="anchor-link" href="#&#50672;&#49845;&#47928;&#51228;">&#182;</a></h3><p>다음의 연습문제들은 2, 3 단원의 내용만을 이용하여 작성해 보라.</p>
+<ul>
+<li>정수인 변수가 주어졌을 때, 홀수(odd)인지 짝수(even)인지 판별하는 프로그램을 작성하라.</li>
 </ul>
 
 </div>
@@ -12999,7 +13053,7 @@ Thanks!
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>월(month)을 입력받으면 해당 월이 며칠인지 출력하는 프로그램을 작성하라.</li>
+<li>월(month)이 대입된 정수인 변수가 주어졌을 때, 해당 월이 며칠인지 출력하는 프로그램을 작성하라.</li>
 </ul>
 
 </div>
@@ -13021,7 +13075,7 @@ Thanks!
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>세 변의 길이를 입력하였을 때, 정삼각형(Equilateral triangle), 이등변삼각형(Isosceles triangle), 일반삼각형(triangle)을 구분하는 프로그램을 작성하라.</li>
+<li>삼각형 세 변의 길이가 변수로 주어졌을 때, 정삼각형(Equilateral triangle), 이등변삼각형(Isosceles triangle), 일반삼각형(triangle)을 구분하는 프로그램을 작성하라.</li>
 </ul>
 
 </div>
@@ -13032,7 +13086,29 @@ Thanks!
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>입력받은 13자리 숫자가 ISBN 13자리 코드의 원칙에 맞는지 판단하는 프로그램을 작성하라.<ul>
+<li>삼각형 세 변의 길이가 변수로 주어졌을 때, 직각 삼각형인지 아닌지 판단하는 프로그램을 작성하라.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>두 자리 정수가 대입된 변수를 검사하여, 십의 자리 숫자와 일의 자리 숫자의 합이 10이 넘는지 판단하는 프로그램을 작성하라.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>13자리 숫자가 ISBN 13자리 코드의 원칙에 맞는지 판단하는 프로그램을 작성하라.<ul>
 <li>ISBN코드가 abcdefghijklm일 때, $a+3b+c+3d+e+3f+g+3h+i+3j+k+3l+m$이 10으로 나누어 떨어져야 한다.</li>
 </ul>
 </li>
@@ -13046,7 +13122,7 @@ Thanks!
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>입력한 해가 윤년인지를 판단하는 프로그램을 작성하라. 윤년의 규칙은 다음과 같다.<ul>
+<li>해(year)가 윤년인지를 판단하는 프로그램을 작성하라. 윤년의 규칙은 다음과 같다.<ul>
 <li>서력 기원 연수가 4로 나누어 떨어지는 해는 윤년으로 한다.(1988년, 1992년, 1996년, 2004년, 2008년, 2012년 …)</li>
 <li>이 중에서 100으로 나누어 떨어지는 해는 평년으로 한다.(1900년, 2100년, 2200년, 2300년, 2500년 …)</li>
 <li>그중에 400으로 나누어 떨어지는 해는 윤년으로 둔다.</li>
@@ -13062,7 +13138,60 @@ Thanks!
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>삼각형 세 변의 길이를 입력받아, 직각 삼각형인지 아닌지 판단하는 프로그램을 작성하라.</li>
+<li>문자열 변수를 검사하여, 마지막 글자가 모음(a, e, i, o, u, A, E, I, O, U)으로 끝나는지 아닌지 판단하는 프로그램을 작성하라.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>문자열 변수를 검사하여, 첫 글자와 마지막 글자가 같은지 검사하는 프로그램을 작성하라. 대소문자는 구분하지 않는다. 즉, Mom은 첫 글자와 마지막 글자가 같은 단어로 간주한다.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>두 문자열 변수를 검사하여, 첫 글자끼리 서로 같은지 검사하는 프로그램을 작성하라. 대소문자는 구분하지 않는다.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li><p>0 이상 100 이하의 값이 입력된 변수를 검사하여, grade를 정하는 프로그램을 작성하라. 규칙은 다음을 따른다.</p>
+<ul>
+<li>95 이상 : A+  </li>
+<li>90 이상 95 미만 : A  </li>
+<li>85 이상 90 미만 : B+  </li>
+<li>80 이상 85 미만 : B  </li>
+<li>그 외의 점수 : C  </li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>몸무게, 키, 성별이 저장된 변수를 조사하여 비만도를 체크하는 프로그램을 작성하라. 비만도 기준은 다음의 자료를 이용하라.<br>
+<a href="http://health.cdc.go.kr/health/mobileweb/content/group_view.jsp?CID=XUNT32FT6B">http://health.cdc.go.kr/health/mobileweb/content/group_view.jsp?CID=XUNT32FT6B</a></li>
 </ul>
 
 </div>
