--- a/3.Python_Loop.html
+++ b/3.Python_Loop.html
@@ -11777,9 +11777,25 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#48152;&#48373;&#47928;">&#48152;&#48373;&#47928;<a class="anchor-link" href="#&#48152;&#48373;&#47928;">&#182;</a></h3><p>프로그래밍을 하다보면, 같은 혹은 비슷한 코드를 여러 번 반복해야 할 경우가 있다.<br>
 반복문은 이러한 반복 작업을 효율적으로 진행할 수 있게 한다.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h4 id="while"><code>while</code><a class="anchor-link" href="#while">&#182;</a></h4><p>같은 코드를 <code>while</code>문을 이용하여 여러 번 실행할 수 있음<br>
 <code>while</code> 루프 문은 주어진 조건이 참일 경우 목표 문장을 반복적으로 실행</p>
-<p>다음의 예제는 5를 3번 합하여 15를 만드는 과정을 보여준다.  즉, 5 * 3을 더하기(5 + 5 + 5)로 반복하는 과정.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>간단한 예제부터 살펴보자.</p>
 
 </div>
 </div>
@@ -11787,6 +11803,53 @@ div#notebook {
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>
+<span class="k">while</span> <span class="n">i</span> <span class="o">&lt;</span> <span class="mi">5</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;I want to print this sentence repeatedly.&quot;</span><span class="p">)</span>
+    <span class="n">i</span> <span class="o">+=</span> <span class="mi">1</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>I want to print this sentence repeatedly.
+I want to print this sentence repeatedly.
+I want to print this sentence repeatedly.
+I want to print this sentence repeatedly.
+I want to print this sentence repeatedly.
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>다음은 보다 복잡한 예제로서 5를 3번 합하여 15를 만드는 과정을 보여준다.  즉, 5 * 3을 더하기(5 + 5 + 5)로 반복하는 과정.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="mi">0</span>
@@ -11870,7 +11933,7 @@ while j &gt; 0:
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">j</span> <span class="o">=</span> <span class="mi">3</span>
-<span class="k">while</span> <span class="n">j</span><span class="o">&gt;</span><span class="mi">0</span><span class="p">:</span>
+<span class="k">while</span> <span class="n">j</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
     <span class="n">j</span> <span class="o">-=</span> <span class="mi">1</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Hello world&quot;</span><span class="p">)</span>
 </pre></div>
@@ -11904,13 +11967,58 @@ Hello world
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="&#48152;&#48373;&#47928;-&#45796;&#49884;-&#49332;&#54196;-&#48372;&#44592;">&#48152;&#48373;&#47928; &#45796;&#49884; &#49332;&#54196; &#48372;&#44592;<a class="anchor-link" href="#&#48152;&#48373;&#47928;-&#45796;&#49884;-&#49332;&#54196;-&#48372;&#44592;">&#182;</a></h4>
+<p>위 반복문을 <code>j</code>의 값을 증가하는 방법으로 코드를 조금 바꾸어 보자.</p>
+
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">j</span> <span class="o">=</span> <span class="mi">0</span>
+<span class="k">while</span> <span class="n">j</span> <span class="o">&lt;</span> <span class="mi">3</span><span class="p">:</span>
+    <span class="n">j</span> <span class="o">+=</span> <span class="mi">1</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Hello world, iteration number : &quot;</span><span class="p">,</span> <span class="n">j</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Hello world, iteration number :  1
+Hello world, iteration number :  2
+Hello world, iteration number :  3
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="&#48152;&#48373;&#47928;-&#45796;&#49884;-&#49332;&#54196;-&#48372;&#44592;">&#48152;&#48373;&#47928; &#45796;&#49884; &#49332;&#54196; &#48372;&#44592;<a class="anchor-link" href="#&#48152;&#48373;&#47928;-&#45796;&#49884;-&#49332;&#54196;-&#48372;&#44592;">&#182;</a></h4>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="mi">0</span>
@@ -11969,7 +12077,7 @@ Hello world
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="mi">3</span>
@@ -12006,7 +12114,7 @@ Hello world
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="mi">3</span>
@@ -12051,7 +12159,7 @@ Hello world
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">x</span> <span class="o">=</span> <span class="mi">3</span>
@@ -12103,7 +12211,7 @@ Hello world
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">count</span> <span class="o">=</span> <span class="mi">0</span>
@@ -12223,10 +12331,10 @@ Input any number : 5
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>If type q, you can quit : hey
-You just typed : hey
-If type q, you can quit : 1
-You just typed : 1
+<pre>If type q, you can quit : Hi
+You just typed : Hi
+If type q, you can quit : Good morning
+You just typed : Good morning
 If type q, you can quit : q
 </pre>
 </div>
