--- a/7.Visualizing_Data.html
+++ b/7.Visualizing_Data.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="7.-Visualizaing-Data">7. Visualizaing Data<a class="anchor-link" href="#7.-Visualizaing-Data">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="matplotlib">matplotlib<a class="anchor-link" href="#matplotlib">&#182;</a></h3><ul>
 <li><p>matplotlib.pyplot</p>
 <ul>
