--- a/8.Statistics.html
+++ b/8.Statistics.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="8.-Statistics">8. Statistics<a class="anchor-link" href="#8.-Statistics">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#45936;&#51060;&#53552;-&#54364;&#54788;">&#45936;&#51060;&#53552; &#54364;&#54788;<a class="anchor-link" href="#&#45936;&#51060;&#53552;-&#54364;&#54788;">&#182;</a></h3>
 </div>
 </div>
