--- a/9.Probability.html
+++ b/9.Probability.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="9.-Probability">9. Probability<a class="anchor-link" href="#9.-Probability">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#46021;&#47549;&#44284;-&#51333;&#49549;">&#46021;&#47549;&#44284; &#51333;&#49549;<a class="anchor-link" href="#&#46021;&#47549;&#44284;-&#51333;&#49549;">&#182;</a></h3><ul>
 <li><p>간략히 말해서, 사건 $E$와 $F$가 독립이라는 것은, 우리가 $E$의 사건이 발생했는지에 대한 정보를 알고 있을 때, 이것이 $F$에 대한 정보를 주지 못하면 사건 $E$와 $F$는 독립이라 한다.</p>
 </li>
