--- a/4.Python_Function.html
+++ b/4.Python_Function.html
@@ -13332,11 +13332,11 @@ Number of chickens :  20
 <h3 id="Built-in-function">Built-in function<a class="anchor-link" href="#Built-in-function">&#182;</a></h3><ul>
 <li><p>Python에 이미 내장되어 있는 built-in function들을 활용할 수 있음</p>
 </li>
-<li><p><a href="https://docs.python.org/2/library/functions.html">https://docs.python.org/2/library/functions.html</a></p>
+<li><p><a href="https://docs.python.org/3/library/functions.html">https://docs.python.org/3/library/functions.html</a></p>
 </li>
-<li><p>range(), str(), raw_input(), len(), …</p>
+<li><p><code>range()</code>, <code>str()</code>, <code>raw()</code>, <code>len()</code>, …</p>
 </li>
-<li><p>max(), min(), abs(), type(), …</p>
+<li><p><code>max()</code>, <code>min()</code>, <code>abs()</code>, <code>type()</code>, …</p>
 </li>
 </ul>
 
@@ -13482,12 +13482,12 @@ Number of chickens :  20
 <ul>
 <li>math 모듈<ul>
 <li>기본적인 수학 연산을 도와주는 모듈</li>
-<li><a href="https://docs.python.org/2/library/math.html">https://docs.python.org/2/library/math.html</a></li>
+<li><a href="https://docs.python.org/3/library/math.html">https://docs.python.org/3/library/math.html</a></li>
 </ul>
 </li>
 <li>random 모듈<ul>
 <li>다양한 분포에 대한 random number를 활용할 수 있게 해주는 모듈</li>
-<li><a href="https://docs.python.org/2/library/random.html">https://docs.python.org/2/library/random.html</a></li>
+<li><a href="https://docs.python.org/3/library/random.html">https://docs.python.org/3/library/random.html</a></li>
 </ul>
 </li>
 </ul>
@@ -13725,17 +13725,17 @@ Number of chickens :  20
 <h3 id="division---&#45208;&#45572;&#44592;">division - &#45208;&#45572;&#44592;<a class="anchor-link" href="#division---&#45208;&#45572;&#44592;">&#182;</a></h3><ul>
 <li><p>다음은 Python 3.x에서는 해당되지 않는 내용이다.</p>
 </li>
-<li><p>Python 2.x에서는 나누기(/)를 사용시 기본적으로 정수를 먼저 반환하려고 함.</p>
+<li><p>Python 2.x에서는 나누기(<code>/</code>)를 사용시 기본적으로 정수를 먼저 반환하려고 함.</p>
 <ul>
-<li>5/2 = 2</li>
+<li><code>5/2 = 2</code></li>
 </ul>
 </li>
 <li><p>실수 나누기를 하고 싶은 경우</p>
 <ul>
-<li>5/2.0 혹은 5/float(2)</li>
+<li><code>5/2.0</code> 혹은 <code>5/float(2)</code></li>
 </ul>
 </li>
-<li><p>만약 default로 실수를 반환하는 나누기(/)를 사용하고 싶을 때, 다음 import문을 사용할 수 있음</p>
+<li><p>만약 default로 실수를 반환하는 나누기(<code>/</code>)를 사용하고 싶을 때, 다음 <code>import</code>문을 사용할 수 있음</p>
 </li>
 </ul>
 
@@ -13989,7 +13989,7 @@ Number of chickens :  20
     <span class="k">while</span><span class="p">(</span><span class="kc">True</span><span class="p">):</span>
         <span class="n">x</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;Guess the number between 1 to 100 (type q to quit) : &quot;</span><span class="p">)</span>
         
-        <span class="k">if</span> <span class="n">a</span> <span class="o">==</span> <span class="s2">&quot;q&quot;</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">x</span> <span class="o">==</span> <span class="s2">&quot;q&quot;</span><span class="p">:</span>
             <span class="k">return</span>
         <span class="k">elif</span> <span class="n">a</span> <span class="o">==</span> <span class="nb">int</span><span class="p">(</span><span class="n">x</span><span class="p">):</span>
             <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Correct!&quot;</span><span class="p">)</span>
@@ -14226,11 +14226,13 @@ Correct!
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#47784;&#46280;&#50640;-&#45824;&#54620;-&#50668;&#47084;-&#44032;&#51648;">&#47784;&#46280;&#50640; &#45824;&#54620; &#50668;&#47084; &#44032;&#51648;<a class="anchor-link" href="#&#47784;&#46280;&#50640;-&#45824;&#54620;-&#50668;&#47084;-&#44032;&#51648;">&#182;</a></h3><ul>
 <li>파이썬 스크립트 파일로 모듈을 만들 수 있음<ul>
-<li>기본 작업 directory에 저장하여 import 할 수 있음</li>
+<li>기본 작업 directory에 저장하여 import 할 수 있음  </li>
+<li><code>import(fibo)</code></li>
 </ul>
 </li>
 <li>모듈 변경과 갱신<ul>
-<li>혹시 모듈을 변경하였다면 reload 명령을 이용하여 갱신<ul>
+<li>혹시 모듈을 변경하였다면 <code>reload</code> 명령을 이용하여 갱신<ul>
+<li><code>from imp import reload</code></li>
 <li><code>reload(fibo)</code></li>
 </ul>
 </li>
