--- a/5.Python_List_Dictionary.html
+++ b/5.Python_List_Dictionary.html
@@ -14971,7 +14971,7 @@ Susan
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;generator object even_numbers at 0x000002AA837FF830&gt;</pre>
+<pre>&lt;generator object even_numbers at 0x000001AA421AF888&gt;</pre>
 </div>
 
 </div>
@@ -15121,7 +15121,7 @@ Susan
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;enumerate at 0x2aa837c24c8&gt;</pre>
+<pre>&lt;enumerate at 0x1aa4219efc0&gt;</pre>
 </div>
 
 </div>
@@ -15222,7 +15222,7 @@ Susan
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>&lt;zip object at 0x000002AA838AB6C8&gt;
+<pre>&lt;zip object at 0x000001AA4225F6C8&gt;
 </pre>
 </div>
 </div>
@@ -15551,7 +15551,7 @@ Susan
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[0.7499954869354202, 0.915027062152807, 0.8955267169424488, 0.39902374361634696]
+<pre>[0.47956362107488626, 0.901273634876332, 0.5687031310845672, 0.6926885149928287]
 </pre>
 </div>
 </div>
@@ -15597,7 +15597,7 @@ Susan
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[43, 39, 29, 31, 56, 50]</pre>
+<pre>[48, 12, 26, 22, 5, 18]</pre>
 </div>
 
 </div>
@@ -15612,7 +15612,7 @@ Susan
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>랜덤 선택 (중복 허용)</p>
 <ul>
-<li>0이상 10미만의 수를 중복하용하여 4번 추출</li>
+<li>0이상 10미만의 수를 중복 허용하여 4번 추출</li>
 <li><code>random.choice()</code>는 주어진 값들 중 임의의 하나의 값을 선택</li>
 </ul>
 
@@ -15642,7 +15642,7 @@ Susan
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>[8, 9, 4, 0]
+<pre>[7, 9, 3, 1]
 </pre>
 </div>
 </div>
@@ -16494,6 +16494,178 @@ robin the brave
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Dictionary의 내용을 변경하면, <code>tweet_keys</code>, <code>tweet_values</code>, <code>tweet_items</code>의 내용이 변경되는 것을 볼 수 있다.</p>
+<p><code>.keys()</code>, <code>.values()</code>, <code>.items()</code>의 method들은 view라는 것을 반환하며, 이들은 dictionary의 상태 변경을 반영한다.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[131]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tweet</span><span class="p">[</span><span class="s2">&quot;date&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;2015-01-02&quot;</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[132]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tweet_keys</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[132]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>dict_keys([&#39;user&#39;, &#39;text&#39;, &#39;retweet_cout&#39;, &#39;hashtags&#39;, &#39;date&#39;])</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[133]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tweet_values</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[133]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>dict_values([&#39;joelgrus&#39;, &#39;Data Science is Awesome&#39;, 100, [&#39;#data&#39;, &#39;#science&#39;], &#39;2015-01-02&#39;])</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[134]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">tweet_items</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[134]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>dict_items([(&#39;user&#39;, &#39;joelgrus&#39;), (&#39;text&#39;, &#39;Data Science is Awesome&#39;), (&#39;retweet_cout&#39;, 100), (&#39;hashtags&#39;, [&#39;#data&#39;, &#39;#science&#39;]), (&#39;date&#39;, &#39;2015-01-02&#39;)])</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>loop를 돌면서 dictionary의 내용을 제거할 수는 없다.</p>
+<ul>
+<li>runtime error가 발생한다.</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[135]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">tweet</span><span class="p">:</span>
+    <span class="k">if</span> <span class="n">key</span> <span class="o">==</span> <span class="s2">&quot;date&quot;</span><span class="p">:</span> <span class="k">del</span> <span class="n">tweet</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt"></div>
+
+
+<div class="output_subarea output_text output_error">
+<pre>
+<span class="ansi-red-intense-fg ansi-bold">---------------------------------------------------------------------------</span>
+<span class="ansi-red-intense-fg ansi-bold">RuntimeError</span>                              Traceback (most recent call last)
+<span class="ansi-green-intense-fg ansi-bold">&lt;ipython-input-135-ea152ffbef83&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-intense-fg ansi-bold">()</span>
+<span class="ansi-green-intense-fg ansi-bold">----&gt; 1</span><span class="ansi-yellow-intense-fg ansi-bold"> </span><span class="ansi-green-intense-fg ansi-bold">for</span> key <span class="ansi-green-intense-fg ansi-bold">in</span> tweet<span class="ansi-yellow-intense-fg ansi-bold">:</span>
+<span class="ansi-green-fg">      2</span>     <span class="ansi-green-intense-fg ansi-bold">if</span> key <span class="ansi-yellow-intense-fg ansi-bold">==</span> <span class="ansi-blue-intense-fg ansi-bold">&#34;date&#34;</span><span class="ansi-yellow-intense-fg ansi-bold">:</span> <span class="ansi-green-intense-fg ansi-bold">del</span> tweet<span class="ansi-yellow-intense-fg ansi-bold">[</span>key<span class="ansi-yellow-intense-fg ansi-bold">]</span>
+
+<span class="ansi-red-intense-fg ansi-bold">RuntimeError</span>: dictionary changed size during iteration</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Counter">Counter<a class="anchor-link" href="#Counter">&#182;</a></h3><ul>
 <li>sequence를 dictionary와 비슷한 형태로 바꾸어 줌</li>
 </ul>
@@ -16503,7 +16675,7 @@ robin the brave
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[132]:</div>
+<div class="prompt input_prompt">In&nbsp;[136]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">Counter</span>
@@ -16548,7 +16720,7 @@ robin the brave
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[133]:</div>
+<div class="prompt input_prompt">In&nbsp;[137]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">c2</span> <span class="o">=</span> <span class="n">Counter</span><span class="p">([</span><span class="s2">&quot;a&quot;</span><span class="p">,</span> <span class="s2">&quot;b&quot;</span><span class="p">,</span> <span class="s2">&quot;a&quot;</span><span class="p">,</span> <span class="s2">&quot;c&quot;</span><span class="p">,</span> <span class="s2">&quot;b&quot;</span><span class="p">,</span> <span class="s2">&quot;a&quot;</span><span class="p">])</span>
