--- a/2.Python_Basic.html
+++ b/2.Python_Basic.html
@@ -13140,7 +13140,7 @@ div#notebook {
 <p>번외 : 만약 Spyder를 이용 중이라면, Spyder 오른쪽 하단의 IPython Console을 이용하여 위의 문장을 실행시켜 보자.
 Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.
 아래 그림의 In [1]: 오른쪽 부분에 <code>print('This is my first Python program.')</code> 를 입력하고 엔터를 입력한다.</p>
-<p><img src="./figure/console.png" width="500"></p>
+<p><img src="figure/console.png" width="500"></p>
 
 </div>
 </div>
@@ -13766,7 +13766,7 @@ Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="./figure/variable.png" width="600"></p>
+<p><img src="figure/variable.png" width="600"></p>
 
 </div>
 </div>
@@ -13827,7 +13827,7 @@ Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="./figure/variable_obejct.png" width="400"></p>
+<p><img src="figure/variable_obejct.png" width="400"></p>
 
 </div>
 </div>
@@ -14453,7 +14453,7 @@ y =  2
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="./figure/input.png" width="450"></p>
+<p><img src="figure/input.png" width="450"></p>
 
 </div>
 </div>
@@ -17114,7 +17114,7 @@ With this code, anybody can hack a server like a pro.
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="./figure/print.png" width="450"></p>
+<p><img src="figure/print.png" width="450"></p>
 
 </div>
 </div>
