--- a/10.Descriptive_Statistics.html
+++ b/10.Descriptive_Statistics.html
@@ -14510,7 +14510,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="numpy&#47484;-&#51060;&#50857;&#54620;-&#49345;&#44288;&#44228;&#49688;">numpy&#47484; &#51060;&#50857;&#54620; &#49345;&#44288;&#44228;&#49688;<a class="anchor-link" href="#numpy&#47484;-&#51060;&#50857;&#54620;-&#49345;&#44288;&#44228;&#49688;">&#182;</a></h3><ul>
-<li><code>np.corrcoef(x)</code>는 x가 2차원 행렬일 때, 각 행들간의 상관계수 행렬 계산</li>
+<li><code>np.corrcoef(x)</code>는 <code>x</code>가 2차원 행렬일 때, 각 행들간의 상관계수 행렬 계산</li>
 </ul>
 
 </div>
