--- a/12.Hypothesis_test_and_inference.html
+++ b/12.Hypothesis_test_and_inference.html
@@ -13801,7 +13801,7 @@ $H_1$ : 동전은 공평하지 않다.</p>
 <h3 id="&#49884;&#48044;&#47112;&#51060;&#49496;&#51012;-&#53685;&#54620;-&#54869;&#51064;">&#49884;&#48044;&#47112;&#51060;&#49496;&#51012; &#53685;&#54620; &#54869;&#51064;<a class="anchor-link" href="#&#49884;&#48044;&#47112;&#51060;&#49496;&#51012;-&#53685;&#54620;-&#54869;&#51064;">&#182;</a></h3><p>100000의 시뮬레이션 실험을 통해, 총 앞면의 횟수가 $(470, 530)$을 넘어가는 extreme 사건의 개수를 합산</p>
 <ul>
 <li>여기서 각각의 시뮬레이션 실험은 동전을 1000회 던지는 실험</li>
-<li>$(470,  530)$가 $\alpha=0.05$ 수준에서 양측 검정의 채택역이므로, 대략 5%의 데이터가 집계될 것으로 예상</li>
+<li>$(470,  530)$가 $\alpha=0.05$ 수준에서 양측 검정의 채택역이므로, 대략 5%의 데이터가 집계될 것으로 예상할 수 있음</li>
 <li>옳은 귀무가설을 기각하는 제1종 오류가 발생하는 비율</li>
 </ul>
 
