--- a/13.Classes.html
+++ b/13.Classes.html
@@ -13084,6 +13084,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Python에서 class의 기능을 간략히 알아본다.</p>
 <ul>
 <li>Python에서 string, dictionary, integer, function 등은 모두 object (객체)이다.  </li>
 <li><code>in</code> 등 과 같은 키워드와 변수명 등을 제외하고는 Python의 모든 것은 object라고 불리운다.  </li>
